chat-room finish

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,51 +1,14 @@
 cmake_minimum_required(VERSION 3.0)
-project(chat_room)
-
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lyslg)
-
-include (lyslg/cmake/utils.cmake)
+project(test)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function -Wno-builtin-macro-redefined")
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/chat)
-# include_directories(/apps/lyslg/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lyslg/lyslg)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lyslg/lyslg/http)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lyslg/lyslg/util)
-# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lyslg/thirdpart)
-# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lyslg/thirdpart/yaml-cpp/include)
-# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lyslg/thirdpart/jsoncpp-1.8.4/include)
-#link_directories(/apps/lyslg/lib)
+add_executable(mergesort  ${CMAKE_CURRENT_SOURCE_DIR}/mergesort.cpp)
+add_executable(QuickSort  ${CMAKE_CURRENT_SOURCE_DIR}/QuickSort.cpp)
+add_executable(KMP  ${CMAKE_CURRENT_SOURCE_DIR}/KMP.cpp)
+add_executable(class_init  ${CMAKE_CURRENT_SOURCE_DIR}/class_init.cpp)
+add_executable(basicsort  ${CMAKE_CURRENT_SOURCE_DIR}/basicsort.cpp)
+add_executable(maxTotalFruits  ${CMAKE_CURRENT_SOURCE_DIR}/maxTotalFruits.cpp) # test 为cmake保留关键字，不能作为文件名
 
-find_package(Boost REQUIRED)
-if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS})
-endif()
-
-#find_package(Protobuf REQUIRED)
-#if(Protobuf_FOUND)
-#    include_directories(${Protobuf_INCLUDE_DIRS})
-#endif()
-# find_package(OpenSSL REQUIRED)
-# if(OPENSSL_FOUND)
-#     include_directories(${OPENSSL_INCLUDE_DIR})
-# endif()
-
-# set(LIB_SRC
-#         chat/my_module.cc
-#         chat/resource_servlet.cc
-#     )
-
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/chat LIB_SRC)
-#PROTOBUF_GENERATE_CPP(PB_SRCS PB_HDRS lyslg/test.proto)
-#list(APPEND LIB_SRC ${PB_SRCS})
-#
-#message(STATUS ${LIB_SRC})
-
-add_library(chat_room SHARED ${LIB_SRC})
-target_link_libraries(chat_room -ljsoncpp)
-force_redefine_file_macro_for_sources(chat_room)
-
-SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
